# Sophy

./: .gitignore  LICENSE  README.md  Sophy.cabal  Sophy.prof  stack.yaml
.stack-work/install/ef077761/doc/floatshow-0.2.4/: LICENSE
.stack-work/install/ef077761/doc/listsafe-0.1.0.1/: LICENSE.md
.stack-work/install/ef077761/flag-cache/: Cabal-1.24.1.0-4DbvsdAtWsMF1yFXIQvfsG  MonadRandom-0.4.2.3-8TfCm6PGvGYB7omozORhov  Sophy-0.1.0.0-2ufMob7ykRpLOEJK3R5PhV  Sophy-0.1.0.0-35sYLCyT4dP8LzwFGtxjeM  Sophy-0.1.0.0-4NT0hJucSPqAKEBPfRuQL6  Sophy-0.1.0.0-5RHyCMCoBMbJe1HL7EhaJM  Sophy-0.1.0.0-64teOSLH1TZBMC2g6ZheUx  Sophy-0.1.0.0-76j7HQtpc1zCZyl1F1PxxC  Sophy-0.1.0.0-84y2Pjhx2OElHSIqu7EqZ  Sophy-0.1.0.0-8PPVuXy8bG98pxpj42Jh9s  Sophy-0.1.0.0-8ZwKauMYRylHvrVtEzueDx  Sophy-0.1.0.0-8rl7iEUgeOCJAD3c1vkV68  Sophy-0.1.0.0-9dgWqvqMpOrAdUbb6w7Pva  Sophy-0.1.0.0-9viTNUZ65rqB7o6UfRVvcJ  Sophy-0.1.0.0-B3Emn8UHcBe2pWCM8fviIB  Sophy-0.1.0.0-Bd588ZGLzA97CekmLTSz1d  Sophy-0.1.0.0-DdtiYLq39l0ILA1FW2PYHz  Sophy-0.1.0.0-EmiEWj9Ze7J3dHWvbYPga5  Sophy-0.1.0.0-Gg4iHDptaYSIPTvbxrCXjJ  Sophy-0.1.0.0-ImJkbqayaSX2KCybfV8bC3  StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  adjunctions-4.3-3ol9sWZt3In19pwXwPv3Xc  ansi-terminal-0.6.2.3-DlzOk98pOsTIrg6vAjszFA  ansi-wl-pprint-0.6.7.3-4I9H5vOplYm60qpyraYKyE  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6  bifunctors-5.4.1-8Xk5Wsnk1fr6rBLkW9MO8p  cabal-helper-0.7.2.0-FuFHXtO4IBW2Q99yHinzj1  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  comonad-5-2RMxpSOQ5MCHLHIelJrHD4  composition-1.0.2.1-KZVQ5Se9KseC7kQ38aLGDn  contravariant-1.4-KSQE31a7FruKHDlp90hIUT  cpphs-1.20.2-GpD5nXqQjzpAbSUhSdFgEv  distributive-0.5.0.2-Cdz2vLOk85j1doGXLcictT  djinn-ghc-0.0.2.3-6tU3k0BPRyFFmsMB4LONZs  djinn-lib-0.0.1.2-I8G4t8gS9ji6rb5IdbJ9kj  either-4.4.1.1-BWHIQ5hdPI1HrEUIKYYfaI  enummapset-0.5.2.1-HVif5OGbhCeItxAA8BnQzA  exceptions-0.8.3-7py7fmRxowDFpHmiHGKrTb  (+58 more)
.stack-work/install/ef077761/lib/x86_64-windows-ghc-8.0.1/Sophy-0.1.0.0-2ufMob7ykRpLOEJK3R5PhV/: Alias.hi  Analyze.hi  AttackTable.hi  BasicConstant.hi  BasicData.hi  BitBoard.hi  Bitwise.hi  Constructor.hi  Evaluation.hi  Move.hi  Perft.hi  Position.hi  Search.hi  SearchOperation.hi  SpeedTest.hi
.stack-work/install/ef077761/lib/x86_64-windows-ghc-8.0.1/Sophy-0.1.0.0-35sYLCyT4dP8LzwFGtxjeM/: Alias.hi  Analyze.hi  AttackTable.hi  BasicConstant.hi  BasicData.hi  BitBoard.hi  Bitwise.hi  Constructor.hi  Evaluation.hi  Move.hi  Perft.hi  Position.hi  Search.hi  SpeedTest.hi
.stack-work/install/ef077761/lib/x86_64-windows-ghc-8.0.1/Sophy-0.1.0.0-4NT0hJucSPqAKEBPfRuQL6/: Lib.hi
.stack-work/install/ef077761/lib/x86_64-windows-ghc-8.0.1/Sophy-0.1.0.0-5RHyCMCoBMbJe1HL7EhaJM/: Alias.hi  Alias.p_hi  Analyze.hi  Analyze.p_hi  AttackTable.hi  AttackTable.p_hi  BasicConstant.hi  BasicConstant.p_hi  BasicData.hi  BasicData.p_hi  BitBoard.hi  BitBoard.p_hi  Bitwise.hi  Bitwise.p_hi  Constructor.hi  Constructor.p_hi  Evaluation.hi  Evaluation.p_hi  Move.hi  Move.p_hi  Perft.hi  Perft.p_hi  Position.hi  Position.p_hi  Search.hi  Search.p_hi  SpeedTest.hi  SpeedTest.p_hi
.stack-work/install/ef077761/lib/x86_64-windows-ghc-8.0.1/Sophy-0.1.0.0-64teOSLH1TZBMC2g6ZheUx/: Alias.hi  Analyze.hi  AttackTable.hi  BasicConstant.hi  BasicData.hi  BitBoard.hi  Bitwise.hi  Constructor.hi  Evaluation.hi  Move.hi  Perft.hi  Position.hi  Search.hi  SpeedTest.hi
.stack-work/install/ef077761/lib/x86_64-windows-ghc-8.0.1/Sophy-0.1.0.0-76j7HQtpc1zCZyl1F1PxxC/: Alias.hi  Analyze.hi  AttackTable-Kate.hi  AttackTable.hi  BasicConstant.hi  BasicData.hi  BitBoard-Kate.hi  BitBoard.hi  Bitwise.hi  Constructor-Kate.hi  Constructor.hi  Evaluation.hi  Move-Kate.hi  Move.hi  Perft-Kate.hi  Perft.hi  Position-Kate.hi  Position.hi  Search.hi  SearchOperation.hi  SpeedTest-Kate.hi  SpeedTest.hi
.stack-work/install/ef077761/lib/x86_64-windows-ghc-8.0.1/Sophy-0.1.0.0-84y2Pjhx2OElHSIqu7EqZ/: Alias.hi  AttackTable.hi  BasicConstant.hi  BasicData.hi  BitBoard.hi  Bitwise.hi  Constructor.hi  Move.hi  Position.hi
.stack-work/install/ef077761/lib/x86_64-windows-ghc-8.0.1/Sophy-0.1.0.0-8PPVuXy8bG98pxpj42Jh9s/: Alias.hi  Move.hi  (+12 more)
.stack-work/install/ef077761/pkgdb/: Sophy-0.1.0.0-KzkJ0b2opaf7oLnrOdwoet.conf  enummapset-0.5.2.1-HVif5OGbhCeItxAA8BnQzA.conf  floatshow-0.2.4-JDq2BiG4iO0Btpjx4Eo14E.conf  listsafe-0.1.0.1-HYBhJ8bTdyX2y2GuVGpvs8.conf  package-Kate.cache  package.cache  parsec3-1.0.1.8-1i5HRU8CeooCoFugPzBBHO.conf
app/: Main.hs
src/: Alias.hs
src/Foundation/: AttackTable.hs  BasicConstant.hs  BasicData.hs  BitBoard.hs  Bitwise.hs  Constructor.hs  Move.hs  Position.hs
src/Search/: Analyze.hs  Evaluation.hs  Search.hs
src/Test/: HashKeyTest.hs  Perft.hs  SpeedTest.hs
src/UCI/: Engine.hs  Interpreter.hs  UCIData.hs
(+182 files in other folders)
