name:                Sophy
version:             0.1.0.0
synopsis:            Chess engine
description:         Please see README.md
homepage:            https://github.com/syanidar/Sophy
license:             BSD3
license-file:        LICENSE
author:              Teguramori Ryo
maintainer:          syanidar@gmail.com
copyright:           2016 Teguramori Ryo
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src\Foundation
                     , src\Test
                     , src\Search
                     , src\UCI
  exposed-modules:     Alias
                     , AttackTable
                     , BasicConstant
                     , BasicData
                     , BitBoard
                     , Bitwise
                     , Constructor
                     , Move
                     , Perft
                     , Position
                     , SpeedTest
                     , HashKeyTest
                     , Analyze
                     , Evaluation
                     , Search
                     , UCIData
                     , Interpreter
                     , Engine
  build-depends:       base >= 4.7 && < 5
                     , split
                     , vector
                     , array
                     , lens
                     , random
                     , parsec
                     , listsafe
                     , time
                     , containers
                     , mtl
                     , stm
                     , composition
                     , either
  default-language:    Haskell2010

executable Sophy
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Sophy
                     , options
  default-language:    Haskell2010

test-suite Sophy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Sophy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/syanidar/Sophy
